--- a/test.html
+++ b/test.html
@@ -2,8 +2,10 @@
 <html>
   <head>
     <title> Test </title>
+    <script type="text/javascript" src="HTMLInclude.js"></script>
   </head>
   <body>
+  	
     <h1> ruben </h1>
-  </body
+  </body>
 </html>
