Test styling on dorian.html

--- a/dorian.html
+++ b/dorian.html
@@ -1,9 +1,21 @@
 <!DOCTYPE>
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title> About Engineering and CS </title>
   </head>
   <body>
+    <div class="topbar">
+        <a class="logo">Computer Science</a>
+        <div class="topbar-right">
+            <a class="active" href="">About Engineering</a>
+            <a href="">About CS</a>
+            <a href="">CS Careers</a>
+            <a href="">CS Academics</a>
+            <a href="">About Us</a>
+        </div>
+    </div>
+    <div id="main">
     <h1> About Engineering </h1>
     <br>
     <h3>Engineering by definition is "the branch of science and technology concerned with the design, building, and use of engines, machines, and structures"</h3>
@@ -50,5 +62,6 @@
 
 
     </h3>
+    </div>
   </body>
 </html>
