update on google

--- a/Jobs.html
+++ b/Jobs.html
@@ -12,7 +12,10 @@
    <h2>Some examples of Companies are:</h2>
    <ul>
     <li>Google</li>
-    <p>Their mission as a companie is "to organize the world’s information and make it universally accessible and useful." 
+    <p>Their mission as a company is "to organize the world’s information and make it universally accessible and useful." If their mission sounds appealing to you, you might be happy working in Google.
+    It is one of the most popular companies among Computer Science students, you can work as a Software Engineer, Test Engineer, Security/Privacy Engineer, Data Sientist and much more! They look for people with a BS in Computer Science,
+    experience with more than one programming language and some of the soft skills such as interpersonal and writing skills. You could contribute to new features in Youtube, create a whole new app, help with the seurity of the user's private 
+    information and many other interesting project at Google.<p>
     <ul>
     
   <h6>Links:<h6>
