--- a/aboutcs.html
+++ b/aboutcs.html
@@ -4,6 +4,16 @@
         <title>About CS</title>
     </head>
     <body>
+        <div class="topbar">
+        <a class="logo">Computer Science</a>
+            <div class="topbar-right">
+                <a class="active" href="">About Engineering</a>
+                <a href="">About CS</a>
+                <a href="">CS Careers</a>
+                <a href="">CS Academics</a>
+                <a href="">About Us</a>
+            </div>
+        </div>    
         <h1> About CS </h1>
     <br>
     <h3>CS, or Computer Science, is the study of computers and computational systems. </h3>
