--- a/TopBar.html
+++ b/TopBar.html
@@ -8,9 +8,9 @@
 	<div class="topbar">
 		<a class="logo">Computer Science</a>
 		<div class="topbar-right">
-			<a class="active" href="">About Engineering</a>
-			<a href="">About CS</a>
-			<a href="">CS Careers</a>
+			<a class="active" href="aboutengineering.html">About Engineering</a>
+			<a href="aboutcs.html">About CS</a>
+			<a href="Jobs.html">CS Careers</a>
 			<a href="">CS Academics</a>
 			<a href="">About Us</a>
 		</div>
