--- a/aboutcs.html
+++ b/aboutcs.html
@@ -1,20 +1,22 @@
 <!DOCTYPE>
 <html>
     <head>
+        <link rel="stylesheet" type="text/css" href="style.css">
         <title>About CS</title>
     </head>
     <body>
         <div class="topbar">
-        <a class="logo">Computer Science</a>
+            <a class="logo">Computer Science</a>
             <div class="topbar-right">
-                <a class="active" href="">About Engineering</a>
-                <a href="">About CS</a>
-                <a href="">CS Careers</a>
+                <a href="aboutengineering.html">About Engineering</a>
+                <a class="active" href="aboutcs.html">About CS</a>
+                <a href="Jobs.html">CS Careers</a>
                 <a href="">CS Academics</a>
                 <a href="">About Us</a>
             </div>
-        </div>    
-        <h1> About CS </h1>
+        </div>   
+        <div id="main">
+    <h1> About CS </h1>
     <br>
     <h3>CS, or Computer Science, is the study of computers and computational systems. </h3>
     <h3>Computer Science mostly deals with software, such as programming, which is different from Electrical Engineering for example, which deals mostly with hardware.</h3>
@@ -36,6 +38,6 @@
             <th></th>
         </tr>
     </table>
-    
+    </div>
     </body>
 </html>
