--- a/aboutengineering.html
+++ b/aboutengineering.html
@@ -6,14 +6,15 @@
   </head>
   <body>
     <div class="topbar">
-        <a class="logo">Computer Science</a>
-        <div class="topbar-right">
-            <a class="active" href="">About Engineering</a>
-            <a href="">About CS</a>
-            <a href="">CS Careers</a>
-            <a href="">CS Academics</a>
-            <a href="">About Us</a>
-        </div>
+    <a class="logo">Computer Science</a>
+    <div class="topbar-right">
+        <a class="active" href="aboutengineering.html">About Engineering</a>
+        <a href="aboutcs.html">About CS</a>
+        <a href="Jobs.html">CS Careers</a>
+        <a href="">CS Academics</a>
+        <a href="">About Us</a>
+    </div>
+    </div>
     </div>
     <div id="main">
     <h1> About Engineering </h1>
