added top bar to jobs

--- a/Jobs.html
+++ b/Jobs.html
@@ -1,9 +1,23 @@
 <!DOCTYPE>
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title> Job Opportunities </title>
   </head>
   <body>
+
+    <div class="topbar">
+      <a class="logo">Computer Science</a>
+      <div class="topbar-right">
+        <a href="aboutengineering.html">About Engineering</a>
+        <a href="aboutcs.html">About CS</a>
+        <a class="active" href="Jobs.html">CS Careers</a>
+        <a href="">CS Academics</a>
+        <a href="">About Us</a>
+      </div>
+    </div>
+    <div id="main">
+
    <p>Now that almost every bussiness has some way of support from technology like the internet, it is safe to say that most businesses need someone with knowledge in Computer Science
    even if it is purely for creating a web page and keep it updated. That is why most companies hire at least one person with a Computer Science degree. It doesn't matter what sector it is; the Government sector, Health sector
    , Energy Industry, Financial sector, Transportation, Retail Companies they all need some sort of service from Computer Scientists.</p>
@@ -19,6 +33,7 @@
     
   <h6>Links:<h6>
   <ul>https://careers.google.com/<ul>
-  
+
+  </div>
   </body>
 </html>
