fixed top bar and changed styling

--- a/Jobs.html
+++ b/Jobs.html
@@ -13,7 +13,7 @@
         <a href="aboutcs.html">About CS</a>
         <a class="active" href="Jobs.html">CS Careers</a>
         <a href="">CS Academics</a>
-        <a href="">About Us</a>
+        <a href="aboutus.html">About Us</a>
       </div>
     </div>
     <div id="main">
