--- a/aboutcs.html
+++ b/aboutcs.html
@@ -12,7 +12,7 @@
                 <a class="active" href="aboutcs.html">About CS</a>
                 <a href="Jobs.html">CS Careers</a>
                 <a href="">CS Academics</a>
-                <a href="">About Us</a>
+                <a href="aboutus.html">About Us</a>
             </div>
         </div>   
         <div id="main">
