fixed dorian's shit

--- a/aboutcs.html
+++ b/aboutcs.html
@@ -1,12 +1,10 @@
 <!DOCTYPE>
 <html>
     <head>
+        <link rel="stylesheet" type="text/css" href="style.css">
         <title>About CS</title>
     </head>
     <body>
-<<<<<<< HEAD
-        <h1> About CS </h1>
-=======
         <div class="topbar">
             <a class="logo">Computer Science</a>
             <div class="topbar-right">
@@ -16,10 +14,9 @@
                 <a href="">CS Academics</a>
                 <a href="aboutus.html">About Us</a>
             </div>
-        </div>   
+        </div>
         <div id="main">
     <h1> About CS </h1>
->>>>>>> 1bd3e6b3748ebe9cb6a85e6fb108c513baa903a5
     <br>
     <h3>CS, or Computer Science, is the study of computers and computational systems. </h3>
     <h3>Computer Science mostly deals with software, such as programming, which is different from Electrical Engineering for example, which deals mostly with hardware.</h3>
