added 4 entries to about us

--- a/aboutus.html
+++ b/aboutus.html
@@ -29,7 +29,19 @@
 
 		<div class="about-entry about-entry-alt">
 			<img src="googleApps.jpg" alt="Picture of Ruben Green" class="pfpalt">
-			<h2>Someone Else</h1>
+			<h2>Someone's Name</h1>
+			<p>More sample Text</p>
+		</div>
+
+		<div class="about-entry">
+			<img src="googleApps.jpg" alt="Picture of Ruben Green" class="pfp">
+			<h2>Someone's Name</h1>
+			<p>this is why i like cs</p>
+		</div>
+
+		<div class="about-entry about-entry-alt">
+			<img src="googleApps.jpg" alt="Picture of Ruben Green" class="pfpalt">
+			<h2>Someone's Name</h1>
 			<p>More sample Text</p>
 		</div>
 	</div>
