--- a/Jobs.html
+++ b/Jobs.html
@@ -41,25 +41,25 @@
    <p>Some examples of Companies are:</p>
    <ul>
     <li> Google </li>
-     <img src="googleApps.jpg" alt="Google Apps">
+     <img src="googleApps.jpg" alt="Google Apps" style="width:200px;height:150px;" align="right">
     <p>Their mission as a company is "to organize the world’s information and make it universally accessible and useful." If their mission sounds appealing to you, you might be happy working in Google.
     It is one of the most popular companies among Computer Science students, you can work as a Software Engineer, Test Engineer, Security/Privacy Engineer, Data Sientist and much more! They look for people with a BS in Computer Science,
     experience with more than one programming language and some of the soft skills such as interpersonal and writing skills. You could contribute to new features in Youtube, create a whole new app, help with the security of the user's private 
     information and many other interesting projects at Google. <a href="https://careers.google.com/"> More information </a> </p>
      <li> FBI </li>
-      <img src="fbi.jpg" alt="FBI Computer Science">
+      <img src="fbi.jpg" alt="FBI Computer Science" style="width:200px;height:125px;" align="right">
      <p>Their mission is to "protect the American people and uphold the Constitution of the United States." As a Federal Agency they have some extra requirements since you could be dealing with delicate information and that would require clearances as 
        well as a background check. You can be an FBI Computer Scientist, IT Specialist - Forensic Examiner, Software Engineer, Cryptanalyst, and much more. They look for people with a Computer Science B.S. who can work in a fast-paced environment and can keep up 
        with their tasks such as identifying threats, recovering information that was deleted, and keep learning to keep up with those evolving threats. You could help keep America safe and keep up with new technology as well as knowing some facts that might not be
        known by the general public. <a href="https://www.fbijobs.gov/career-paths/stem"> More information </a> </p>
      <li> Facebook </li>
-     <img src="facebook.jpg" alt="Facebook Image">
+     <img src="facebook.jpg" alt="Facebook Image" style="width:200px;height:170px;" align="right">
      <p>Their mission is to "give people the power to build community and bring the world closer together." Since Facebook is used by billions of people around the world, and they also own Instagram and WhatsApp which are also widely used, if you end up working there you would work on 
        projects that will most likely impact a lot of people around the world. They look for people from all the backgrounds and a Computer Science major is appreciated in their many of their teams such as the Software Engineering, Security, Research, Data and Analytics, Oculus, Instagram, and many more.
        You could be protecting users private information, improving the apps, working on the VR software and many other fun and important projects. All engineers go through Engineering Bootcamp where they learn more about the company and the teams so you can identify the team that you would like to be a part of.
        <a href="https://www.facebook.com/careers/students-and-grads/?teams[0]=Internship%20-%20Engineering%2C%20Tech%20%26%20Design&teams[1]=Internship%20-%20Business&teams[2]=Internship%20-%20PhD&teams[3]=University%20Grad%20-%20PhD%20%26%20Postdoc&teams[4]=University%20Grad%20-%20Engineering%2C%20Tech%20%26%20Design&teams[5]=University%20Grad%20-%20Business">More Information</a> </p>
      <li> Novacoast </li>
-     <img src="novacoast.png" alt="Novacoast Logo">
+     <img src="novacoast.png" alt="Novacoast Logo" style="width:100px;height:200px;" align="right">
      <p>As a consulting firm, they are "a uniquely positioned IT services and solutions company, Novacoast is less defined by our broad range of expertise and services than by a perspective rooted in our cooperative environment of adaptable problem solving." They are project-based and are best known for their cybersecurity Advisory Services, however they also cover other areas such as Development. 
        You could end up working on a project for Starbucks, the FBI, a banking company, and many other different companies. While you could specialize in one area, Novacoast will give you the opportunity to try new things and keep learning since they have a large number of different projects depending on who requires their services and what they require. They look for a B.S. in Computer Science, good problem solving skills and creativity!
       You might want to take some courses in Cybersecurity and even have some certifications if you want to be more competitive but these are not required. <a href="https://www.novacoast.com/work-at-novacoast/">More information</a> </p>
