--- a/Jobs.html
+++ b/Jobs.html
@@ -19,50 +19,74 @@
     <div id="main">
      
    <h1>Career Options</h1>
-   <p>Computer Science is a field with a large range of career options which is great since one major can lead you to many different jobs and if you don't like one, don't worry! There are plenty more options. Some of these options are:<p>
+   <p>
+     Computer Science is a field with a large range of career options which is great since one major can lead you to many different jobs and if you don't like one, don't worry! There are plenty more options. Some of these options are:
+   </p>
    <ul>
      <li>Software Developer:</li>
-       <p>Use several development environments to write, debug, and modify software for applications. Also write code to create a new application or to complement other services and existing applications. <a href="https://www.computerscience.org/careers/software-developer/"> More information </a> </p>
+       <p>
+         Use several development environments to write, debug, and modify software for applications. Also write code to create a new application or to complement other services and existing applications. <a href="https://www.computerscience.org/careers/software-developer/"> More information </a> 
+       </p>
      <li>Viedo Game Designer:</li>
-      <p>Design Video Games from the character stories to the code that brings them to life either in a cell phone, a computer, or a console. Test code and fix problems that might arise during the development. <a href="https://www.computerscience.org/careers/video-game-designer/"> More information </a> </p>
+      <p>
+        Design Video Games from the character stories to the code that brings them to life either in a cell phone, a computer, or a console. Test code and fix problems that might arise during the development. <a href="https://www.computerscience.org/careers/video-game-designer/"> More information </a> 
+     </p>
      <li>Security Analyst:</li>
-      <p>Protect company's information as well as users sensitive information when using an app or some service. Develop systems that prevent information from being stolen and servers from being hacked. <a href="https://www.computerscience.org/careers/information-security-analyst/">More information </a> </p>
+      <p>
+        Protect company's information as well as users sensitive information when using an app or some service. Develop systems that prevent information from being stolen and servers from being hacked. <a href="https://www.computerscience.org/careers/information-security-analyst/">More information </a>
+     </p>
      <li>Web Developer</li>
-      <p>Create or keep Web Pages updated by modifying the code that makes up the web page. This is computer programming focused on web pages, you can either only focus on the code that creates the design and displays the information or you could also think about the design of the web page and the logic behind it like the reason for the colors and font and the design itself not only the code to make up the design. <a href="https://www.computerscience.org/careers/web-developer/">More information</a> </p>
+      <p>
+        Create or keep Web Pages updated by modifying the code that makes up the web page. This is computer programming focused on web pages, you can either only focus on the code that creates the design and displays the information or you could also think about the design of the web page and the logic behind it like the reason for the colors and font and the design itself not only the code to make up the design. <a href="https://www.computerscience.org/careers/web-developer/">More information</a> 
+     </p>
      <li>Information Technology Architects:</li>
-      <p>Manage the technological aspects of a certain business, ensure compliance with regulations and implement new systems. <a/ href="https://www.computerscience.org/careers/information-technology-architect/"> More information </a> </p>
+      <p>
+        Manage the technological aspects of a certain business, ensure compliance with regulations and implement new systems. <a/ href="https://www.computerscience.org/careers/information-technology-architect/"> More information </a>
+     </p>
      <li> And many <a href="https://www.computerscience.org/careers/"> more careers </a> !! </li>
     </ul>
    <br>
    <h2>Companies</h2>
-   <p>Now that almost every bussiness uses technology in some way like the internet, it is safe to say that most businesses need someone with knowledge in Computer Science
+   <p>
+   Now that almost every bussiness uses technology in some way like the internet, it is safe to say that most businesses need someone with knowledge in Computer Science
    even if it is purely for creating a web page and keep it updated. That is why most companies hire at least one person with a Computer Science degree. It doesn't matter what sector it is; the Government sector, Health sector,
-   Energy Industry, Financial sector, Transportation, Retail Companies they all need some sort of service from Computer Scientists.</p>
-   <p>Some examples of Companies are:</p>
+   Energy Industry, Financial sector, Transportation, Retail Companies they all need some sort of service from Computer Scientists.
+   </p>
+   <p>
+     Some examples of Companies are:
+   </p>
    <ul>
     <li> Google </li>
-     <img src="googleApps.jpg" alt="Google Apps" style="width:200px;height:150px;" align="right">
-    <p>Their mission as a company is "to organize the world’s information and make it universally accessible and useful." If their mission sounds appealing to you, you might be happy working in Google.
+     <img src="googleApps.jpg" alt="Google Apps" style="width:250px;height:150px;" align="right">
+    <p>
+    Their mission as a company is "to organize the world’s information and make it universally accessible and useful." If their mission sounds appealing to you, you might be happy working in Google.
     It is one of the most popular companies among Computer Science students, you can work as a Software Engineer, Test Engineer, Security/Privacy Engineer, Data Sientist and much more! They look for people with a BS in Computer Science,
     experience with more than one programming language and some of the soft skills such as interpersonal and writing skills. You could contribute to new features in Youtube, create a whole new app, help with the security of the user's private 
-    information and many other interesting projects at Google. <a href="https://careers.google.com/"> More information </a> </p>
+    information and many other interesting projects at Google. <a href="https://careers.google.com/"> More information </a> 
+    </p>
      <li> FBI </li>
-      <img src="fbi.jpg" alt="FBI Computer Science" style="width:200px;height:125px;" align="right">
-     <p>Their mission is to "protect the American people and uphold the Constitution of the United States." As a Federal Agency they have some extra requirements since you could be dealing with delicate information and that would require clearances as 
+      <img src="fbi.jpg" alt="FBI Computer Science" style="width:250px;height:125px;" align="left">
+     <p>
+       Their mission is to "protect the American people and uphold the Constitution of the United States." As a Federal Agency they have some extra requirements since you could be dealing with delicate information and that would require clearances as 
        well as a background check. You can be an FBI Computer Scientist, IT Specialist - Forensic Examiner, Software Engineer, Cryptanalyst, and much more. They look for people with a Computer Science B.S. who can work in a fast-paced environment and can keep up 
        with their tasks such as identifying threats, recovering information that was deleted, and keep learning to keep up with those evolving threats. You could help keep America safe and keep up with new technology as well as knowing some facts that might not be
-       known by the general public. <a href="https://www.fbijobs.gov/career-paths/stem"> More information </a> </p>
+       known by the general public. <a href="https://www.fbijobs.gov/career-paths/stem"> More information </a>
+     </p>
      <li> Facebook </li>
-     <img src="facebook.jpg" alt="Facebook Image" style="width:200px;height:170px;" align="right">
-     <p>Their mission is to "give people the power to build community and bring the world closer together." Since Facebook is used by billions of people around the world, and they also own Instagram and WhatsApp which are also widely used, if you end up working there you would work on 
+     <img src="facebook.jpg" alt="Facebook Image" style="width:250px;height:170px;" align="right">
+     <p>
+       Their mission is to "give people the power to build community and bring the world closer together." Since Facebook is used by billions of people around the world, and they also own Instagram and WhatsApp which are also widely used, if you end up working there you would work on 
        projects that will most likely impact a lot of people around the world. They look for people from all the backgrounds and a Computer Science major is appreciated in their many of their teams such as the Software Engineering, Security, Research, Data and Analytics, Oculus, Instagram, and many more.
        You could be protecting users private information, improving the apps, working on the VR software and many other fun and important projects. All engineers go through Engineering Bootcamp where they learn more about the company and the teams so you can identify the team that you would like to be a part of.
-       <a href="https://www.facebook.com/careers/students-and-grads/?teams[0]=Internship%20-%20Engineering%2C%20Tech%20%26%20Design&teams[1]=Internship%20-%20Business&teams[2]=Internship%20-%20PhD&teams[3]=University%20Grad%20-%20PhD%20%26%20Postdoc&teams[4]=University%20Grad%20-%20Engineering%2C%20Tech%20%26%20Design&teams[5]=University%20Grad%20-%20Business">More Information</a> </p>
+       <a href="https://www.facebook.com/careers/students-and-grads/?teams[0]=Internship%20-%20Engineering%2C%20Tech%20%26%20Design&teams[1]=Internship%20-%20Business&teams[2]=Internship%20-%20PhD&teams[3]=University%20Grad%20-%20PhD%20%26%20Postdoc&teams[4]=University%20Grad%20-%20Engineering%2C%20Tech%20%26%20Design&teams[5]=University%20Grad%20-%20Business">More Information</a>
+     </p>
      <li> Novacoast </li>
-     <img src="novacoast.png" alt="Novacoast Logo" style="width:100px;height:200px;" align="right">
-     <p>As a consulting firm, they are "a uniquely positioned IT services and solutions company, Novacoast is less defined by our broad range of expertise and services than by a perspective rooted in our cooperative environment of adaptable problem solving." They are project-based and are best known for their cybersecurity Advisory Services, however they also cover other areas such as Development. 
+     <img src="novacoast.png" alt="Novacoast Logo" style="width:200px;height:200px;" align="left">
+     <p>
+       As a consulting firm, they are "a uniquely positioned IT services and solutions company, Novacoast is less defined by our broad range of expertise and services than by a perspective rooted in our cooperative environment of adaptable problem solving." They are project-based and are best known for their cybersecurity Advisory Services, however they also cover other areas such as Development. 
        You could end up working on a project for Starbucks, the FBI, a banking company, and many other different companies. While you could specialize in one area, Novacoast will give you the opportunity to try new things and keep learning since they have a large number of different projects depending on who requires their services and what they require. They look for a B.S. in Computer Science, good problem solving skills and creativity!
-      You might want to take some courses in Cybersecurity and even have some certifications if you want to be more competitive but these are not required. <a href="https://www.novacoast.com/work-at-novacoast/">More information</a> </p>
+      You might want to take some courses in Cybersecurity and even have some certifications if you want to be more competitive but these are not required. <a href="https://www.novacoast.com/work-at-novacoast/">More information</a> 
+     </p>
      <li> <a href="https://www.uber.com/us/en/careers/teams/engineering/"> Uber </a> </li>
      <li> <a href="https://jobs.disneycareers.com/category/technology-jobs/391-1635/26715/1"> Disney </a> </li>
      <li> <a href="https://www.raytheon.com/capabilities"> Raytheon </a> </li>
@@ -70,7 +94,7 @@
     </ul> 
     
   <br>
-  <h6>Links:</h6>
+  <h3>Links:</h3>
   <ul>
     <li>https://careers.google.com/ </li>
     <li>https://www.computerscience.org/ </li>
