--- a/Jobs.html
+++ b/Jobs.html
@@ -27,17 +27,17 @@
        <p>
          Use several development environments to write, debug, and modify software for applications. Also write code to create a new application or to complement other services and existing applications. <a href="https://www.computerscience.org/careers/software-developer/" target="_blank"> More information </a> 
        </p>
-     <li>Viedo Game Designer:</li>
+     <li>Video Game Designer:</li>
       <p>
-        Design Video Games from the character stories to the code that brings them to life either in a cell phone, a computer, or a console. Test code and fix problems that might arise during the development. <a href="https://www.computerscience.org/careers/video-game-designer/" target="_blank"> More information </a> 
+        Design video games from the character stories to the code that brings them to life either in a cell phone, a computer, or a console. Test code and fix problems that might arise during the development. <a href="https://www.computerscience.org/careers/video-game-designer/" target="_blank"> More information </a> 
      </p>
      <li>Security Analyst:</li>
       <p>
-        Protect company's information as well as users sensitive information when using an app or some service. Develop systems that prevent information from being stolen and servers from being hacked. <a href="https://www.computerscience.org/careers/information-security-analyst/" target="_blank">More information </a>
+        Protect a company's information as well as users' sensitive information when using an app or some service. Develop systems that prevent information from being stolen and servers from being hacked. <a href="https://www.computerscience.org/careers/information-security-analyst/" target="_blank">More information </a>
      </p>
      <li>Web Developer</li>
       <p>
-        Create or keep Web Pages updated by modifying the code that makes up the web page. This is computer programming focused on web pages, you can either only focus on the code that creates the design and displays the information or you could also think about the design of the web page and the logic behind it like the reason for the colors and font and the design itself not only the code to make up the design. <a href="https://www.computerscience.org/careers/web-developer/" target="_blank">More information</a> 
+        Create or keep web pages updated by modifying the code that makes up the web page. This is computer programming focused on web pages, you can either only focus on the code that creates the design and displays the information. However, you could also think about the design of the web page and the logic behind it like the reason for the colors, fonts and the design itself not only the code to make up the design. <a href="https://www.computerscience.org/careers/web-developer/" target="_blank">More information</a> 
      </p>
      <li>Information Technology Architects:</li>
       <p>
@@ -50,7 +50,7 @@
    <p>
    Now that almost every bussiness uses technology in some way like the internet, it is safe to say that most businesses need someone with knowledge in Computer Science
    even if it is purely for creating a web page and keep it updated. That is why most companies hire at least one person with a Computer Science degree. It doesn't matter what sector it is; the Government sector, Health sector,
-   Energy Industry, Financial sector, Transportation, Retail Companies they all need some sort of service from Computer Scientists.
+   Energy Industry, Financial sector, Transportation, Retail Companies, they all need some sort of service from Computer Scientists.
    </p>
    <p>
      Some examples of Companies are:
@@ -60,27 +60,27 @@
      <li> <b>Google</b> </li>
     <p>
     Their mission as a company is "to organize the world’s information and make it universally accessible and useful." If their mission sounds appealing to you, you might be happy working in Google.
-    It is one of the most popular companies among Computer Science students, you can work as a Software Engineer, Test Engineer, Security/Privacy Engineer, Data Sientist and much more! They look for people with a BS in Computer Science,
-    experience with more than one programming language and some of the soft skills such as interpersonal and writing skills. You could contribute to new features in Youtube, create a whole new app, help with the security of the user's private 
+    It is one of the most popular companies among Computer Science students, you can work as a Software Engineer, Test Engineer, Security/Privacy Engineer, Data Sientist and much more! They look for people with a B.S. in Computer Science,
+    experience with more than one programming language and some of the soft skills such as interpersonal and writing skills. You could contribute to new features in Youtube, create a whole new app, help with the security of users' private 
     information and many other interesting projects at Google. <a href="https://careers.google.com/" target="_blank"> More information </a> 
     </p>
      <br>
      <li> <b>FBI</b> </li>
       <img src="fbi.jpg" alt="FBI Computer Science" style="width:240px;height:115px;" align="left">
      <p>
-       Their mission is to "protect the American people and uphold the Constitution of the United States." As a Federal Agency they have some extra requirements since you could be dealing with delicate information and that would require clearances as 
+       Their mission is to "protect the American people and uphold the Constitution of the United States." As a Federal Agency they have some extra requirements since you could be dealing with delicate information so you would require top clearances as 
        well as a background check. You can be an FBI Computer Scientist, IT Specialist - Forensic Examiner, Software Engineer, Cryptanalyst, and much more. They look for people with a Computer Science B.S. who can work in a fast-paced environment and can keep up 
        with their tasks such as identifying threats, recovering information that was deleted, and keep learning to keep up with those evolving threats. You could help keep America safe and keep up with new technology as well as knowing some facts that might not be
        known by the general public. <a href="https://www.fbijobs.gov/career-paths/stem" target="_blank"> More information </a>
      </p>
      <br>
      <br>
-     <img src="facebook.jpg" alt="Facebook Image" style="width:250px;height:150px;" align="right">
+     <img src="facebook.jpg" alt="Facebook Image" style="width:250px;height:150px;float:"right" >
      <li> <b>Facebook</b> </li>
      <p>
        Their mission is to "give people the power to build community and bring the world closer together." Since Facebook is used by billions of people around the world, and they also own Instagram and WhatsApp which are also widely used, if you end up working there you would work on 
-       projects that will most likely impact a lot of people around the world. They look for people from all the backgrounds and a Computer Science major is appreciated in their many of their teams such as the Software Engineering, Security, Research, Data and Analytics, Oculus, Instagram, and many more.
-       You could be protecting users private information, improving the apps, working on the VR software and many other fun and important projects. All engineers go through Engineering Bootcamp where they learn more about the company and the teams so you can identify the team that you would like to be a part of.
+       projects that will most likely have an impact on a lot of people around the world. They look for people from all the backgrounds and a Computer Science major is appreciated in many of their teams such as the Software Engineering, Security, Research, Data and Analytics, Oculus, Instagram, and many more.
+       You could be protecting users' private information, improving the apps, working on the VR software and many other fun and important projects. All engineers go through Engineering Bootcamp where they learn more about the company and the teams so you can identify the team that you would like to be a part of.
        <a href="https://www.facebook.com/careers/students-and-grads/?teams[0]=Internship%20-%20Engineering%2C%20Tech%20%26%20Design&teams[1]=Internship%20-%20Business&teams[2]=Internship%20-%20PhD&teams[3]=University%20Grad%20-%20PhD%20%26%20Postdoc&teams[4]=University%20Grad%20-%20Engineering%2C%20Tech%20%26%20Design&teams[5]=University%20Grad%20-%20Business" target="_blank">More Information</a>
      </p>
      <br>
