--- a/Jobs.html
+++ b/Jobs.html
@@ -75,7 +75,7 @@
      </p>
      <br>
      <br>
-     <img src="facebook.jpg" alt="Facebook Image" style="width:250px;height:150px;float:"right" >
+     <img src="facebook.jpg" alt="Facebook Image" style="width:250px;height:150px;border:30;" align="right" >
      <li> <b>Facebook</b> </li>
      <p>
        Their mission is to "give people the power to build community and bring the world closer together." Since Facebook is used by billions of people around the world, and they also own Instagram and WhatsApp which are also widely used, if you end up working there you would work on 
