--- a/Jobs.html
+++ b/Jobs.html
@@ -56,7 +56,7 @@
      Some examples of Companies are:
    </p>
    <ul>
-     <img src="googleApps.jpg" alt="Google Apps" style="width:250px;height:140px;margin:20px;" align="right">
+     <img src="googleApps.jpg" alt="Google Apps" style="width:250px;height:140px;margin:2px 30px;" align="right">
      <li> <b>Google</b> </li>
     <p>
     Their mission as a company is "to organize the world’s information and make it universally accessible and useful." If their mission sounds appealing to you, you might be happy working in Google.
@@ -66,7 +66,7 @@
     </p>
      <br>
      <li> <b>FBI</b> </li>
-      <img src="fbi.jpg" alt="FBI Computer Science" style="width:240px;height:115px;margin:20px;" align="left">
+      <img src="fbi.jpg" alt="FBI Computer Science" style="width:240px;height:115px;margin:2px 30px;" align="left">
      <p>
        Their mission is to "protect the American people and uphold the Constitution of the United States." As a Federal Agency they have some extra requirements since you could be dealing with delicate information so you would require top clearances as 
        well as a background check. You can be an FBI Computer Scientist, IT Specialist - Forensic Examiner, Software Engineer, Cryptanalyst, and much more. They look for people with a Computer Science B.S. who can work in a fast-paced environment and can keep up 
@@ -75,7 +75,7 @@
      </p>
      <br>
      <br>
-     <img src="facebook.jpg" alt="Facebook Image" style="width:250px;height:150px;margin:20px;" align="right" >
+     <img src="facebook.jpg" alt="Facebook Image" style="width:250px;height:150px;margin:2px 30px;" align="right" >
      <li> <b>Facebook</b> </li>
      <p>
        Their mission is to "give people the power to build community and bring the world closer together." Since Facebook is used by billions of people around the world, and they also own Instagram and WhatsApp which are also widely used, if you end up working there you would work on 
@@ -85,7 +85,7 @@
      </p>
      <br>
      <li> <b>Novacoast</b> </li>
-     <img src="novacoast.png" alt="Novacoast Logo" style="width:120px;height:100px;margin:20px;" align="left">
+     <img src="novacoast.png" alt="Novacoast Logo" style="width:120px;height:100px;margin:2px 25px;" align="left">
      <p>
        As a consulting firm, they are "a uniquely positioned IT services and solutions company, Novacoast is less defined by our broad range of expertise and services than by a perspective rooted in our cooperative environment of adaptable problem solving." They are project-based and are best known for their cybersecurity Advisory Services, however they also cover other areas such as Development. 
        You could end up working on a project for Starbucks, the FBI, a banking company, and many other different companies. While you could specialize in one area, Novacoast will give you the opportunity to try new things and keep learning since they have a large number of different projects depending on who requires their services and what they require. They look for a B.S. in Computer Science, good problem solving skills and creativity!
