--- a/Jobs.html
+++ b/Jobs.html
@@ -19,6 +19,7 @@
     <div id="main">
      
    <h1>Career Options</h1>
+   <img src="cscareers.jpg" alt="Computer Science Careers" style="width:400px;height:350px;float:right">
    <p>
      Computer Science is a field with a large range of career options which is great since one major can lead you to many different jobs and if you don't like one, don't worry! There are plenty more options. Some of these options are:
    </p>
@@ -56,7 +57,7 @@
      Some examples of Companies are:
    </p>
    <ul>
-     <img src="googleApps.jpg" alt="Google Apps" style="width:250px;height:140px;margin:2px 30px;" align="right">
+     <img src="Gapps.jpg" alt="Google Apps" style="width:250px;height:140px;margin:2px 30px;" align="right">
      <li> <b>Google</b> </li>
     <p>
     Their mission as a company is "to organize the world’s information and make it universally accessible and useful." If their mission sounds appealing to you, you might be happy working in Google.
