--- a/Jobs.html
+++ b/Jobs.html
@@ -19,7 +19,7 @@
     <div id="main">
      
    <h1>Career Options</h1>
-   <img src="cscareers.jpg" alt="Computer Science Careers" style="width:400px;height:350px;float:right">
+   <img src="cscareers.jpg" alt="Computer Science Careers" style="width:400px;height:350px;float:right;margin:0px 20px;">
    <p>
      Computer Science is a field with a large range of career options which is great since one major can lead you to many different jobs and if you don't like one, don't worry! There are plenty more options. Some of these options are:
    </p>
@@ -36,7 +36,7 @@
       <p>
         Protect a company's information as well as users' sensitive information when using an app or some service. Develop systems that prevent information from being stolen and servers from being hacked. <a href="https://www.computerscience.org/careers/information-security-analyst/" target="_blank">More information </a>
      </p>
-     <li>Web Developer</li>
+     <li>Web Developer:</li>
       <p>
         Create or keep web pages updated by modifying the code that makes up the web page. This is computer programming focused on web pages, you can either only focus on the code that creates the design and displays the information. However, you could also think about the design of the web page and the logic behind it like the reason for the colors, fonts and the design itself not only the code to make up the design. <a href="https://www.computerscience.org/careers/web-developer/" target="_blank">More information</a> 
      </p>
