--- a/Jobs.html
+++ b/Jobs.html
@@ -19,7 +19,7 @@
     <div id="main">
      
    <h1>Career Options</h1>
-   <img src="cscareers.jpg" alt="Computer Science Careers" style="width:400px;height:350px;float:right;margin:0px 20px;">
+   <img src="cscareers.jpg" alt="Computer Science Careers" style="width:400px;height:350px;float:right;margin:20px;">
    <p>
      Computer Science is a field with a large range of career options which is great since one major can lead you to many different jobs and if you don't like one, don't worry! There are plenty more options. Some of these options are:
    </p>
