--- a/ComputerScience.html
+++ b/ComputerScience.html
@@ -3,8 +3,16 @@
   <head>
     <title> Computer Science </title>
   </head>
-  <body>
-  <div style="background-image: url('cs.jpg'); background-size:cover">
+    <style>
+body {
+  background-image: url('cs.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+</style>
 
+  <body>
+    <h1>COMPUTER SCIENCE</h1>
   </body>
 </html>
