--- a/ComputerScience.html
+++ b/ComputerScience.html
@@ -6,13 +6,11 @@
     <style>
 body {
   background-image: url('cs.jpg');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
+  background-size: 100% 100%;
 }
-</style>
+    </style>
 
   <body>
-    <h1>COMPUTER SCIENCE</h1>
+    <h1 style="background-color:white;">COMPUTER SCIENCE</h1>
   </body>
 </html>
