--- a/aboutus.html
+++ b/aboutus.html
@@ -23,25 +23,34 @@
 
 		<div class="about-entry">
 			<img src="googleApps.jpg" alt="Picture of Ruben Green" class="pfp">
-			<h2>Ruben Green</h1>
+			<h2>Ruben Green</h2>
 			<p>this is why i like cs</p>
 		</div>
 
 		<div class="about-entry about-entry-alt">
-			<img src="googleApps.jpg" alt="Picture of Ruben Green" class="pfpalt">
-			<h2>Someone's Name</h1>
-			<p>More sample Text</p>
+			<img src="IMG_0210_Original.jpg" alt="Picture of Maria Gill" class="pfpalt">
+			<h2>Maria Gill</h2>
+			<p>
+			I chose Engineering because nothing else excites me more. I don't have a specific reason but when I think about Computer Science
+			I just feel like it is right for me. I like challenges, freedom, and I hate routine or monotony, and Computer Science is a field that
+			keeps growing so it can definitely keep me busy learning all the new things and I can also create those changes. Also, since there are 
+			so many things you can do with code I feel like if I get bored of web pages or mobile apps, I can simply apply my knowledge somewhere else 
+			like cybersecurity or Data Analysis. As of right now, I think I'm leaning towards Cybersecurity but you never know, maybe after a few
+			quarters I will change my mind and the fact that I can change my focus without much trouble is exactly what I was looking for. I am not one
+			of those people who have a plan for their future but I can confidently say that I like it so far and I can see myself coding for my next 
+			50 years without problem.
+			</p>
 		</div>
 
 		<div class="about-entry">
 			<img src="googleApps.jpg" alt="Picture of Ruben Green" class="pfp">
-			<h2>Someone's Name</h1>
+			<h2>Someone's Name</h2>
 			<p>this is why i like cs</p>
 		</div>
 
 		<div class="about-entry about-entry-alt">
 			<img src="googleApps.jpg" alt="Picture of Ruben Green" class="pfpalt">
-			<h2>Someone's Name</h1>
+			<h2>Someone's Name</h2>
 			<p>More sample Text</p>
 		</div>
 	</div>
