--- a/aboutus.html
+++ b/aboutus.html
@@ -32,7 +32,7 @@
 			<h2>Maria Gill</h2>
 			<p>
 			I chose Engineering because nothing else excites me more. I don't have a specific reason but when I think about Computer Science
-			I just feel like it is right for me. I like challenges, freedom, and I hate routine or monotony, and Computer Science is a field that
+			I just feel like it is right for me. I like challenges, freedom, and I hate routine or monotony. Computer Science is a field that
 			keeps growing so it can definitely keep me busy learning all the new things and I can also create those changes. Also, since there are 
 			so many things you can do with code I feel like if I get bored of web pages or mobile apps, I can simply apply my knowledge somewhere else 
 			like cybersecurity or Data Analysis. As of right now, I think I'm leaning towards Cybersecurity but you never know, maybe after a few
