added top bar landing page

--- a/ComputerScience.html
+++ b/ComputerScience.html
@@ -1,16 +1,34 @@
 <!DOCTYPE>
 <html>
   <head>
+	<link rel="stylesheet" type="text/css" href="style.css">
     <title> Computer Science </title>
   </head>
     <style>
 body {
-  background-image: url('cs.jpg');
-  background-size: 100% 100%;
+	overflow-y: hidden;
+}
+img
+{
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 }
     </style>
 
   <body>
-   
+   <div class="topbar">
+        <a class="logo" href="ComputerScience.html">Computer Science</a>
+        <div class="topbar-right">
+            <a href="aboutengineering.html">About Engineering</a>
+            <a href="aboutcs.html">About CS</a>
+            <a href="Jobs.html">CS Careers</a>
+            <a href="">CS Academics</a>
+            <a href="aboutus.html">About Us</a>
+        </div>
+    </div>
+    <div>
+    	<img src="cs.jpg" alt="CS Front Page">
+    </div>
   </body>
 </html>
