--- a/aboutcs.html
+++ b/aboutcs.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div class="topbar">
-            <a class="logo">Computer Science</a>
+            <a class="logo" href="ComputerScience.html">Computer Science</a>
             <div class="topbar-right">
                 <a href="aboutengineering.html">About Engineering</a>
                 <a class="active" href="aboutcs.html">About CS</a>
