--- a/Jobs.html
+++ b/Jobs.html
@@ -7,13 +7,13 @@
   <body>
 
     <div class="topbar">
-      <a class="logo">Computer Science</a>
+      <a class="logo" href="ComputerScience.html">Computer Science</a>
       <div class="topbar-right">
         <a href="aboutengineering.html">About Engineering</a>
         <a href="aboutcs.html">About CS</a>
         <a class="active" href="Jobs.html">CS Careers</a>
         <a href="">CS Academics</a>
-        <a href="">About Us</a>
+        <a href="aboutus.html">About Us</a>
       </div>
     </div>
     <div id="main">
