--- a/ComputerScience.html
+++ b/ComputerScience.html
@@ -7,12 +7,7 @@
     <style>
 body {
 	overflow-y: hidden;
-}
-img
-{
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
+	text-align: center;
 }
     </style>
 
@@ -23,12 +18,11 @@ img
             <a href="aboutengineering.html">About Engineering</a>
             <a href="aboutcs.html">About CS</a>
             <a href="Jobs.html">CS Careers</a>
-            <a href="">CS Academics</a>
+            <a href="learnCS.html">CS Academics</a>
             <a href="aboutus.html">About Us</a>
         </div>
     </div>
-    <div>
-    	<img src="cs.jpg" alt="CS Front Page">
-    </div>
+    <div id="landing-bg"></div>
+    <a href="aboutengineering.html" id="landing-link">Get Started</a>
   </body>
 </html>
