--- a/Jobs.html
+++ b/Jobs.html
@@ -12,7 +12,7 @@
         <a href="aboutengineering.html">About Engineering</a>
         <a href="aboutcs.html">About CS</a>
         <a class="active" href="Jobs.html">CS Careers</a>
-        <a href="">CS Academics</a>
+        <a href="learnCS.html">CS Academics</a>
         <a href="aboutus.html">About Us</a>
       </div>
     </div>
