--- a/learnCS.html
+++ b/learnCS.html
@@ -9,9 +9,9 @@
             <a class="logo">Computer Science</a>
             <div class="topbar-right">
                 <a href="aboutengineering.html">About Engineering</a>
-                <a href="aboutcs.html">About CS</a>
+                <a class="active" href="aboutcs.html">About CS</a>
                 <a href="Jobs.html">CS Careers</a>
-                <a class="active" href="learnCS.html">CS Academics</a>
+                <a href="">CS Academics</a>
                 <a href="aboutus.html">About Us</a>
             </div>
         </div>
@@ -73,6 +73,12 @@
         </li>
        
     </ol>
+
+	<h3> A good book to get started with a popular programming language is: The C++ Programming Language by Bjarne Stroustrup (the creator of c++) </h3>
+	<p> This book is for any level of experience programmer, and covers everything from introductory basic content, to the language's philosophy. This book
+is a great resource for both first-years learning c++ and engineers in industry, making it the ideal book learn c++, or simply provide a reference to experienced coders.</p>
+<br><br>
+ 	<p> Stroustrup, Bjarne. The C++ Programming Language. 4th ed., Pearson, 2018.</p>	
 
     </body>
 </html>
